--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate..jdbc.lob.non_contextual_creation=true
 
 app.version=1.0.0
+# Configure root logger level
+logging.level.root=INFO
+
+# Configure logging for a specific package or class
+logging.level.com.example.package=DEBUG
+logging.level.org.springframework=DEBUG
